<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".feature.login.LoginActivity">

    <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:layout_marginTop="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUser"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUser"
                android:hint="@string/hint_user"
                android:imeOptions="actionNext"
                style="@style/EditText"
                android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            app:passwordToggleEnabled="true"
            style="@style/TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                style="@style/EditText"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.santander.app.core.ui.widget.button.ProgressButton
            android:id="@+id/btLogin"
            style="@style/Button"
            android:minWidth="@dimen/dp_190"
            android:text="@string/action_login"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_32"
            app:loading="false"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>