<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginscreen.LoginActivity">

    <ImageView
            android:layout_width="126dp"
            android:layout_height="56dp"
            app:srcCompat="@mipmap/logo"
            android:id="@+id/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout

            android:background="@drawable/shape_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            android:layout_marginTop="105dp"
            android:layout_marginStart="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/login_user"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:background="@null"
            android:textColorHint="#F6F6F6"
            android:maxLines="1"
         />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:background="@drawable/shape_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/edUser"
            android:layout_marginTop="21dp"
            android:layout_marginStart="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="@string/Loginpassword"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:layout_gravity="center"
                android:textColorHint="#F6F6F6"
                android:maxLines="1"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/LoginTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="36dp"
            style="@style/styleButtonBlue"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:visibility="gone"
            android:layout_height="0dp"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/edPassword"
            android:layout_marginTop="32dp"/>
</android.support.constraint.ConstraintLayout>