<resources>
    <string name="app_name">projetoTesteSantanter</string>
    <string name="login_user"> User</string>
    <string name="Loginpassword">Password</string>
    <string name="LoginTextButton">Login</string>
    <string name="label_account">Conta</string>
    <string name="label_balance">Saldo</string>
    <string name="item_statement_label_payment">Pagamento</string>
    <string name="error_password">A senha deve conter pelo menos uma maiuscula e um caracter especial</string>
    <string name="error_user"> Usuário invalido , utilize seu CPF ou e-mail para logar</string>
    <string name="error_not_internet">Seu aparelho esta sem acesso a Internet</string>
</resources>
