<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="541dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="User"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/password"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/login"
        android:fontFamily="@font/helveticaneue"
        android:lineSpacingExtra="18sp"
        android:onClick="onBtnClick"
        android:shadowColor="#4D3B48EE"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity = "center"
        android:layout_weight="1"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="gone"
        android:layout_marginStart="87dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>


</android.support.constraint.ConstraintLayout>